# traditional-rag

./: main.py  pyproject.toml
datas/: doc_0.txt  doc_1.txt  doc_2.txt
traditional_rag/: basics.ipynb
traditional_rag/chroma_db/: chroma.sqlite3
