[project]
name = "udemyrag-knaik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
]
